--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <!-- Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-touch-fullscreen" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Vba Go">
     <link rel="apple-touch-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/vbago-logo-small.png">
     <!-- Add to home screen for Windows -->
